style.css
/* ... */
.item_container a:nth-child(3) .scroll_item {
    background-image: url('resources/Home_Page/Latest_stories/story3.jpg');
    background-size: cover;
}
.item_container a:nth-child(4) .scroll_item {
    background-image: url('resources/Home_Page/Latest_stories/story4.jpg');
    background-size: cover;
}
.item_container a:nth-child(5) .scroll_item {
    background-image: url('resources/Home_Page/Latest_stories/story5.jpg');
    background-size: cover;
}
.item_container a:nth-child(6) .scroll_item {
    background-image: url('resources/Home_Page/Latest_stories/story6.jpg');
    background-size: cover;
}
.scroll_buttons{
    margin-left: 55vw;
}
.world_corners{
    margin-left: 44vw;
}
.sbutton{
    all: unset;
    width: 1.1vw;
    height: 4vh;
}
#scroll_left{
    background: url(resources/Iconify/arrow_left.svg);
    background-repeat: no-repeat;
    background-size: cover;
}
#scroll_right{
    margin-left: 1vw;
    background: url(resources/Iconify/arrow_right.svg);
    background-repeat: no-repeat;
    background-size: cover;
}

#scroll_left_corners{
    background: url(resources/Iconify/arrow_left.svg);
    background-repeat: no-repeat;
    background-size: cover;
}
#scroll_right_corners{
    margin-left: 1vw;
    background: url(resources/Iconify/arrow_right.svg);
    background-repeat: no-repeat;
    background-size: cover;
}
.sbutton:focus{
    outline: revert;
}
.item_container a:nth-child(1) .corners_item {
    background-image: url(resources/Home_Page/Corners_of_the_world/corner1.jpg);
}
.item_container a:nth-child(2) .corners_item {
    background-image: url(resources/Home_Page/Corners_of_the_world/corner2.jpg);
}
.item_container a:nth-child(3) .corners_item {
    background-image: url(resources/Home_Page/Corners_of_the_world/corner3.jpg);
}
.item_container a:nth-child(4) .corners_item {
    background-image: url(resources/Home_Page/Corners_of_the_world/corner4.jpg);
}
.item_container a:nth-child(5) .corners_item {
    background-image: url(resources/Home_Page/Corners_of_the_world/corner5.jpg);
}
.item_container a:nth-child(6) .corners_item {
    background-image: url(resources/Home_Page/Corners_of_the_world/corner6.jpg);
}
.subscription {
    background: url(resources/Home_Page/underwater_background.jpeg);
    height: 100vh;
    width: 100vw;
    background-size: cover;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}
.subscription_plans_container{
    position: relative;
    height: auto;
    width: 90vw;
    display: flex;
    justify-content: center;
    gap: 5vw;
}
.subscription_plan{
    position: relative;
    background-color: #292A37;
    height: 70vh;
    width: 25vw;
    display: flex;
    justify-content: center;
    border-radius: 2rem;
}
.price{
    position: absolute;
    width: 100%;
    height: 12%;
    background-color: #3F4050;
    top: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.subscription_plan h1{
    color: white;
    font-family: "Kumbh Sans", sans-serif;
    margin-top: 5vh;
}
.price p{
    font-family: 'average sans';
    font-size: 1.5rem;
    color: white;
}
.plan_features{
    position: absolute;
    display: flex;
    flex-direction: column;
    top: 28vh;
    gap: 2vh;
}
.plan_features p{
    font-family: 'average sans';
    font-size: 1.1rem;
    color: #F8F8FF;
}
.plan1_features p:nth-child(n+3):nth-child(-n+6) {
    color: rgba(248, 248, 255, 0.4);
}
.subscription_icon_container{
    position: absolute;
    display: flex;
    flex-direction: column;
    left: 10%;
    top: 28vh;
    gap: 2vh;
}
.subscription_icon_container img{
    width: 1.28rem;
}
.cancel_opacity{
    opacity: 0.4;
}
.start_exploring{
    position: absolute;
    bottom: 3.5vh;
    padding: 1.5rem 2.2rem;
    background-color: #454651;
    border-radius: 2rem;
    cursor: pointer;
}
.start_exploring p{
    color: white;
    font-family: 'average sans';
    font-size: 1.2rem;
}
.plan2_features p:nth-child(n+5):nth-child(-n+6) {
    color: rgba(248, 248, 255, 0.4);
}
.plan2_exploring{
    background-color: #195BFF;
}
/* ... */

